# qualitygate-python

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: README.md  __init__.py  main.py
qualitygate_python_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: format.ps1  lint.ps1  test.ps1  test_smoke.ps1
tests/: conftest.py
tests/api/: test_auth.py  test_health.py  test_sanity.py  test_todos.py
tests/helpers/: http_client.py
tests/ui/: conftest.py  test_todo_ui.py
